[package]
name = "kzg"
version = "0.1.0"
authors = ["Alex Stokes <r.alex.stokes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
blst = "0.3.2"
oblast = { path = "oblast" }
num-bigint = "0.3.1"

[dev-dependencies]
hex = "0.4.2"
